# selvans

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
demos/selvans-angular-demo/: Dockerfile  Dockerfile.dev  PLACEHOLDER.md  nginx.conf  project.json  tsconfig.json
demos/selvans-angular-demo/src/: index.html  main.ts  styles.css
demos/selvans-angular-demo/src/app/: app.component.ts  app.routes.ts
demos/selvans-angular-demo/src/app/pages/home/: home.component.ts
demos/selvans-angular-demo/src/app/pages/projects/: projects.component.ts
demos/selvans-angular-demo/src/app/pages/tasks/: tasks.component.ts
demos/selvans-angular-demo/src/app/store/: task-store.service.ts
demos/selvans-python-demo/: Dockerfile  main.py  pyproject.toml
scripts/: setup.bat  setup.mjs  setup.sh
services/selvans-core/: Dockerfile  docker-compose.yml  pyproject.toml  test_ui_smoke.py
services/selvans-core/selvans_core/: config.py  hub.py  main.py  mcp_server.py  models.py  registry.py  routing.py  telemetry.py
services/selvans-core/selvans_core/ui/: router.py
services/selvans-core/selvans_core/ui/templates/: app_detail.html  base.html  dashboard.html  events.html
services/selvans-core/selvans_core/ui/templates/partials/: apps.html  events_recent.html
