[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "selvans-core"
version = "0.1.0"
description = "selvans Core — standalone hub service (MCP server, WS hub, telemetry, admin UI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]==0.124.2",
    "uvicorn==0.38.0",
    "aiosqlite==0.22.1",
    "jinja2==3.1.6",
    "python-multipart==0.0.32",
    "mcp==1.27.2",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
]

[project.optional-dependencies]
dev = ["pytest==9.0.3", "pytest-asyncio==1.4.0", "httpx==0.28.1"]

[tool.hatch.build.targets.wheel]
packages = ["Selvans_core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
